# CS32-Projects

./: .gitignore
Homework1/: CMakeLists.txt  Sequence.cpp  newSequence.cpp  testScoreList.cpp  valgrind.xml
Homework2/: CMakeLists.txt  eval.cpp  hw.txt  mazequeue.cpp  mazestack.cpp
Homework3/: CMakeLists.txt  investment.cpp  linear.cpp  maze.cpp  testLinear.cpp  testTree.cpp  tree.cpp
Homework4/: CMakeLists.txt  Sequence.h  bad.cpp  hw.txt  list.cpp  odds.cpp  report.md  sorts.cpp
Homework5/: CMakeLists.txt  hw  hw.drawio  hw.txt  main.cpp
Midterm1/: CMakeLists.txt  main.cpp  problem1.cpp  problem2.cpp
Midterm2/: CMakeLists.txt  main.cpp  problem1.cpp  problem2.cpp
Project1/: CMakeLists.txt  City.cpp  City.h  Flatulan.cpp  Flatulan.h  Game.cpp  Game.h  History.cpp  History.h  Player.cpp  Player.h  globals.h  main.cpp  utilities.cpp
Project2/: CMakeLists.txt  ScoreList.cpp  ScoreList.h  Sequence.cpp  Sequence.h  ascii.md  main.cpp  newSequence.cpp  newSequence.h  report.txt  testScoreList.cpp  testSequence.cpp  testnewSequence.cpp
Project3/: ClassDiagram.drawio
Project3/GhostRacer/: Actor.cpp  Actor.h  ClassDiagram.cd  Doxyfile  GhostRacer.vcxproj  StudentWorld.cpp  StudentWorld.h  report.txt
Project4-LightSkeleton/: CMakeLists.txt  StudentTextEditor.cpp  StudentTextEditor.h  main.cpp
Project4/Wurd/: StudentSpellCheck.cpp  StudentSpellCheck.h  StudentTextEditor.cpp  StudentTextEditor.h  StudentUndo.cpp  StudentUndo.h  test.txt
